# tarantool-c

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Doxyfile  LICENSE  README  README.connecting.rst  README.md  README.msgpackobject.rst  README.reply.rst  README.request.rst  README.request_builder.rst  README.rst  WINDOWS-HOWTO.txt  buffering.html  connection.html  deploy_key.enc  documentation.sh  genindex.html  index.html  makefile  msgpackobject.html  objects.inv  odbc_coverage.sh  reply.html  request.html  request_builder.html  schema.html  search.html  searchindex.js  stream.html  tarantool-c.spec  tarantool.rpm.spec  test.sh
.github/workflows/: fast_testing.yml  osx_testing.yml  packaging.yml  reusable_testing.yml
_static/: documentation_options.js
cmake/: FindMsgPuck.cmake
debian/: changelog  control  copyright  libtarantool-c-dev.install  libtarantool-c.install  rules
doc/: CMakeLists.txt  README.buffer.rst  README.connecting.rst  README.request_builder.rst  README.schema.rst
doc/source/: buffering.rst  conf.py  connection.rst  example.c  index.rst  msgpackobject.rst  reply.rst  request.rst  request_builder.rst  schema.rst  stream.rst
include/: CMakeLists.txt  tnt_winsup.h  tp.h
include/tarantool/: tarantool.h  tnt_auth.h  tnt_buf.h  tnt_call.h  tnt_delete.h  tnt_eval.h  tnt_execute.h  tnt_fetch.h  tnt_insert.h  tnt_io.h  tnt_iob.h  tnt_iter.h  tnt_mem.h  tnt_net.h  tnt_object.h  tnt_opt.h  tnt_ping.h  tnt_proto.h  tnt_replace.h  tnt_reply.h  tnt_request.h  tnt_schema.h  tnt_select.h  tnt_stream.h  tnt_update.h
include/tarantool/win32/: vcunistd.h
lib/: cksum.c  cksum.h  console.c  console.h  crc32.h  file.c  file.h  iproto.h  lex.c  lex.h  makefile  queue.h  request.h  session.c  session.h  tarantool.h  tb.h  test.c  tp.1.5.h  tp.c  tp.h  unpack.h  utf8.c  utf8.h
odbc/: CMakeLists.txt  connections.c  driver.h  format.c  halloc.c  info.c  odbc.c  odbc.ini  odbc_inst.cmd  odbc_test.c  regexp.c  resource.h  resource.rc  statement.c  tarantool.template  test.dataset  tnt_odbc.def  winsetup.c
pack/: Makefile  build.sh  pack.sh
rpm/: tarantool-c.spec
src/: CMakeLists.txt  console.c  file.c  file.h  lex.c  session.c  tarantool.h  tp.h  utf8.c  utf8.h
test/: .tarantoolctl  CMakeLists.txt  common.c  common.h  disconnect_test.c  plain_test.c  suite.c  tarantool_call.c  tarantool_disconnect.c  tarantool_poll.c  tarantool_tcp.c  tarantool_unix.c  tarantool_utest.c  test-run.py  test.c  test.h  test.sh  test_setup.lua  tph_cpp.cc  unit.c
test/cli/: box.lua  cli.test.py  poll.test.py  suite.ini  tarantool-leak.test.py  tarantool-poll.skipcond  tarantool-poll.test.py  tarantool-tcp.test.py  tarantool_leak.c  tarantool_poll.c  tarantool_tcp.c
test/common/: box.lua  common.c  test.h  tnt_assoc.c  tnt_assoc.h
test/lib/: tarantool_server.py
test/odbc/: CMakeLists.txt  bind_input.c  box.lua  connection.c  connection.test.py  describecol.c  describecol.test.py  execdirect.c  execdirect.test.py  execrowcount.c  execrowcount.test.py  fetch.c  fetch.test.py  inbind.c  inbind.test.py  metadata.c  metadata.test.py  odbc_test_utils.py  old_inbind.c  old_prepare.c  prepare.c  prepare.test.py  prepare_input.c  run.py  set_odbcini.sh  suite.ini  test_setup.lua  typeinfo.c  typeinfo.test.py  util.h
test/shared/: box.lua
test/unix/: box.lua  suite.ini  tarantool-unix.test.py  tarantool_unix.c
tfile/: makefile  test.c  tfile.c  tfile.h
tnt/: CMakeLists.txt  tnt_assoc.c  tnt_assoc.h  tnt_auth.c  tnt_buf.c  tnt_call.c  tnt_delete.c  tnt_execute.c  tnt_fetch.c  tnt_insert.c  tnt_io.c  tnt_iob.c  tnt_iter.c  tnt_mem.c  tnt_net.c  tnt_object.c  tnt_opt.c  tnt_ping.c  tnt_proto_internal.h  tnt_reply.c  tnt_request.c  tnt_schema.c  tnt_select.c  tnt_stream.c  tnt_update.c
tntnet/: CMakeLists.txt  tnt_io.c  tnt_iob.c  tnt_net.c  tnt_opt.c
tntrpl/: CMakeLists.txt  tnt_dir.c  tnt_log.c  tnt_rpl.c  tnt_snapshot.c  tnt_xlog.c
tunpack/: tunpack.h
